// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic 1`] = `
"==========

    export default Component.extend({
    });
  
~~~~~~~~~~
foo
~~~~~~~~~~
 => tagName: div
~~~~~~~~~~

    export default Component.extend({
        tagName: \\"\\"
    });
  
~~~~~~~~~~
<div ...attributes>foo</div>
=========="
`;

exports[`handles \`attributeBindings\` correctly 1`] = `
"==========

    export default Component.extend({
      attributeBindings: ['foo', 'bar:baz'],
    });
  
~~~~~~~~~~
foo
~~~~~~~~~~
 => tagName: div
~~~~~~~~~~

    export default Component.extend({
      tagName: \\"\\",
    });
  
~~~~~~~~~~
<div foo={{this.foo}} bar={{this.baz}} ...attributes>foo</div>
=========="
`;

exports[`handles \`classNameBindings\` correctly 1`] = `
"==========

    export default Component.extend({
      classNameBindings: ['a:b', 'x:y:z', 'foo::bar'],
    });
  
~~~~~~~~~~
foo
~~~~~~~~~~
 => tagName: div
~~~~~~~~~~

    export default Component.extend({
      tagName: \\"\\",
    });
  
~~~~~~~~~~
<div class=\\"{{if this.a \\"b\\"}} {{if this.x \\"y\\" \\"z\\"}} {{unless this.foo \\"bar\\"}}\\" ...attributes>foo</div>
=========="
`;

exports[`handles \`classNames\` correctly 1`] = `
"==========

    export default Component.extend({
      classNames: ['foo', 'bar:baz'],
    });
  
~~~~~~~~~~
foo
~~~~~~~~~~
 => tagName: div
~~~~~~~~~~

    export default Component.extend({
      tagName: \\"\\",
    });
  
~~~~~~~~~~
<div class=\\"foo bar:baz\\" ...attributes>foo</div>
=========="
`;

exports[`handles \`elementId\` correctly 1`] = `
"==========

    export default Component.extend({
      elementId: 'qux',
    });
  
~~~~~~~~~~
foo
~~~~~~~~~~
 => tagName: div
~~~~~~~~~~

    export default Component.extend({
      tagName: \\"\\",
    });
  
~~~~~~~~~~
<div id=\\"qux\\" ...attributes>foo</div>
=========="
`;

exports[`handles single \`classNames\` item correctly 1`] = `
"==========

    export default Component.extend({
      classNames: ['foo'],
    });
  
~~~~~~~~~~
foo
~~~~~~~~~~
 => tagName: div
~~~~~~~~~~

    export default Component.extend({
      tagName: \\"\\",
    });
  
~~~~~~~~~~
<div class=\\"foo\\" ...attributes>foo</div>
=========="
`;

exports[`replaces existing \`tagName\` 1`] = `
"==========

    export default Component.extend({
      tagName: 'span',
    });
  
~~~~~~~~~~
foo
~~~~~~~~~~
 => tagName: span
~~~~~~~~~~

    export default Component.extend({
      tagName: \\"\\",
    });
  
~~~~~~~~~~
<span ...attributes>foo</span>
=========="
`;
